fix logo on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -119,8 +119,13 @@ body {
     .logo {
         height: 40px;
         width: 40px;
+        margin: 5px auto 5px;
     }
-    
+
+    .header {
+        padding: 10px;
+    }
+
     .content {
         flex-direction: column;
     }
